--- a/introduction.tex
+++ b/introduction.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 %\section{Introduction}
 \label{labint}
- The TREK/E36 experiment was conducted at the Japan Proton Accelerator Research Complex (J-PARC), with physics data-taking occurring from September to December 2015, and has been decommissioned as of March 2016. TREK/E36 was part of the TREK program at J-PARC, where TREK stands for Time Reversal Experiment with Stopped Kaons. The primary goal of the TREK/E36 experiment was to provide a high precision electroweak measurement in order to test lepton universality, which is expressed as an identical coupling constant of the charged lepton family $(e,$ $\mu,$ and $\tau)$. Lepton universality is a staple of the Standard Model (SM) and any violation of this would be clear evidence of New Physics (NP) beyond the SM. 
+ The TREK/E36 experiment was conducted at the Japan Proton Accelerator Research Complex (J-PARC), with physics data-taking occurring from September to December 2015, and has been decommissioned as of March 2016. TREK/E36 was part of the TREK program at J-PARC, where TREK stands for Time Reversal Experiment with Stopped Kaons. The primary goal of the TREK/E36 experiment was to provide a high precision electroweak measurement in order to test lepton universality, which is expressed as an identical coupling constant of the charged lepton family $(e,$ $\mu,$ and $\tau)$. Lepton universality is a staple of the Standard Model (SM) and any violation of this would be clear evidence of New Physics (NP) beyond the SM \cite{e06prop}. 
  
  Data analysis of two-body leptonic decays of stopped kaons $K_{l2}$ is currently being performed in order to provide a precise measurement of the decay width ratio $R_K=\Gamma(K^+\rightarrow e^+\nu)/\Gamma(K^+\rightarrow\mu^+\nu)$ to test lepton universality. Due to the $V-A$ structure of charged current couplings, the ratio $R_K$ is helicity-suppressed in the SM and is therefore sensitive to beyond SM physics. The $K_{l2}$ decay width is calculated as
  
@@ -19,4 +19,4 @@
   \label{eqn:ratioRk}
  \end{align}
 
- where $\delta_r$ represents radiative corrections, detailed calculations of which were carried out in. Thus the SM value for $R^{SM}_{K}$ has been calculated to high accuracy $(\Delta R_K/R_K\sim0.4\times10^{-4})$ thereby making it possible to search for NP effects by conducting a precise measurement of $R_K$.
+ where $\delta_r$ represents radiative corrections, detailed calculations of which were carried out in. Thus the SM value for $R^{SM}_{K}$ has been calculated to high accuracy $(\Delta R_K/R_K\sim0.4\times10^{-4})$ thereby making it possible to search for NP effects by conducting a precise measurement of $R_K$ \cite{Kohl2013rma}.
